fix: left-align the help list

--- a/src/commands/HelpCMD/helpCMD.module.css
+++ b/src/commands/HelpCMD/helpCMD.module.css
@@ -13,3 +13,7 @@
   border-color: transparent;
   cursor: pointer;
 }
+
+li {
+  text-align: left;
+}
